added some styling to css

--- a/index.html
+++ b/index.html
@@ -30,60 +30,60 @@
 
     <!-- Timeblocks go here -->
     <div class="container">
-      <div class="9">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="9 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="10">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="10 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="11">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="11 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="12">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="12 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="1">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="1 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="2">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="2 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="3">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="3 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="4">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="4 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
 
-      <div class="5">
-        <div>9 AM</div>
-        <textarea></textarea>
+      <div class="5 row">
+        <div class="time-block hour">9 AM</div>
+        <textarea class="description"></textarea>
         <button>Save</button>
       </div>
-      
+
     </div>
     
 
