I have to finish this still, so far I've thought about using a loop to compare time (WIP)

--- a/index.html
+++ b/index.html
@@ -31,55 +31,55 @@
     <!-- Timeblocks go here -->
     <div class="container">
       <div class="9 row">
-        <div class="time-block hour">9 AM</div>
+        <div id="nine" class="time-block hour">9 AM</div>
         <textarea class="description desc1" id="description1"></textarea>
         <button id="button1">Save</button>
       </div>
 
       <div class="10 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">10 AM</div>
         <textarea class="description" id="description2"></textarea>
         <button id="button2">Save</button>
       </div>
 
       <div class="11 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">11 AM</div>
         <textarea class="description" id="description3"></textarea>
         <button id="button3">Save</button>
       </div>
 
       <div class="12 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">12 PM</div>
         <textarea class="description" id="description4"></textarea>
         <button id="button4">Save</button>
       </div>
 
       <div class="1 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">1 PM</div>
         <textarea class="description" id="description5"></textarea>
         <button id="button5">Save</button>
       </div>
 
       <div class="2 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">2 PM</div>
         <textarea class="description" id="description6"></textarea>
         <button id="button6">Save</button>
       </div>
 
       <div class="3 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">3 PM</div>
         <textarea class="description" id="description7"></textarea>
         <button id="button7">Save</button>
       </div>
 
       <div class="4 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">4 PM</div>
         <textarea class="description" id="description8"></textarea>
         <button id="button8">Save</button>
       </div>
 
       <div class="5 row">
-        <div class="time-block hour">9 AM</div>
+        <div class="time-block hour">5 PM</div>
         <textarea class="description" id="description9"></textarea>
         <button id="button9">Save</button>
       </div>
